arranged file with index.html

--- a/Quiz/css/cp.css
+++ b/Quiz/css/cp.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(cg.jpg);
+    background-image: url(../images/cg.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
