--- a/Quiz/css/math.css
+++ b/Quiz/css/math.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(p.jpg);
+    background-image: url(../images/m.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
