--- a/Quiz/css/style.css
+++ b/Quiz/css/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(c.jpg);
+    background-image: url(../images/q.jpg);
     background-position: center;
     background-size: cover;
     height: 100vh;
